# bited

./: .editorconfig  .envrc  .gitattributes  .gitignore  .mdformat.toml  LICENSE  README.md  VERSION  all.tscn  dark.tres  default.nix  default.tres  export_presets.cfg  flake.nix  gdformatrc  gdtoolkit.nix  icon.svg.import  justfile  light.tres  mkdocs.yml  prerelease  preview.tscn  project.godot  pyproject.toml  release.nix  requirements.in  requirements.txt  versions.json
.github/: dependabot.yml
0.0.0-0/: 404.html  index.html  sitemap.xml
1/: 404.html  index.html  sitemap.xml
assets/: UnifontExMono.woff.import  bited.bdf  bited.woff2.import  kirsch.woff2.import  nerdfont.ttf.import  test.bdf  uc.db  variad.bdf
components/: Nav.gd  PanelStyler.gd  all.gd  all.tscn  b_font.gd  bdf_parser.gd  bitmap.gd  charsets.gd  dark.tres  finder_parser.gd  glyph.gd  glyph.tscn  light.tres  line_foc.gd  nav.gd  nav.tscn  panel_styler.gd  preview.gd  settings.gd  settings.tscn  spin_foc.gd  theme_switcher.gd  util.gd
docs/: .pages  .pages.yml  credits.md  index.md  install.md  why.md
godot/: bited-rust.gdextension  bited-rust.gdextension.uid  export_presets.cfg  project.godot
main/: 404.html  index.html  sitemap.xml
nix/: build-check.nix  default.nix  godot_4-export-templates.nix  godot_4.nix  release.nix
rust/: .gitignore  Cargo.toml  flake.nix
scripts/: gen.js  sbcs.sql
v0.0.0-13/: 404.html  index.html
v0.0.0-2/: 404.html  index.html  sitemap.xml
v0.0.0-4/: 404.html  index.html  sitemap.xml
v0.0.0-5/: 404.html  index.html  sitemap.xml
v0.0.0-6/: 404.html  (+2 more)
(+718 files in other folders)
